--- a/products/products.css
+++ b/products/products.css
@@ -1,20 +1,37 @@
-.fade-slider__item {
-    background: url(./../img/web-ready/decor/header-guys.png) center center / contain no-repeat;
-    width: 100%;
-    height: 214%;
-    overflow: hidden;
-    position: absolute;
-    top: -50px;
+:root {
+    --fontAlegreya: 'Alegreya Sans SC', Arial, sans-serif;
+}
+
+.wrapper {
+    min-width: 1300px;
 }
 
 .hero {
-    height: 180px;
     min-height: 180px;
+    height: 180px;
+    overflow: hidden;
 }
 
-.lined__text {
-    font-size: 31px;
-    font-family: "Alegreya Sans SC", sans-serif;
-    font-weight: 900;
-    font-style: normal;
+.fade-slider__item {
+    background: url(./../img/web-ready/decor/header-guys.png) center center / contain no-repeat;
+    height: 224%;
+    width: 100%;
+    position: absolute;
+    top: -52px;
 }
+
+.fade-slider__text {
+    left: 51%;
+    top: 43%;
+}
+
+.lined-text {
+    font-size: 31px;
+    font-family: var(--fontAlegreya);
+}
+
+.lined-text__word{
+    padding: 0 6px 5px;
+    margin-top: -4px;
+}
+
