--- a/main.css
+++ b/main.css
@@ -45,6 +45,7 @@ ul > li {
 .hero {
     height: 100vh;
     min-height: 650px;
+    max-height: 1000px;
     background: url(./img/web-ready/bg/hero.jpg) center center / cover no-repeat;
     position: relative;
     margin-bottom: 130px;
